--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,73 @@ h3 {
 
 body {
   font-family: Montserrat;
-  line-height: 1.5;
+}
+
+ul {
+  list-style-type: none;
+  margin: 20px;
+  padding: 0px;
+  width: 200px;
+  /* background-color: #f1f1f1; */
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+li a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+li a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+
+.column1 {
+    float: left;
+    width: 25%;
+    margin-top: 20px;
+    padding: 0px;
+}
+
+.column2 {
+    float: left;
+    width: 70%;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+#entryForm {
+  margin-top: 50px;
+  display: none;
+}
+
+#title {
+  height: 30px;
+  width: 600px;
+}
+
+#content {
+  height: 200px;
+  width: 600px;
 }
 
 .header {
   margin: -10px;
   background-color: lightseagreen;
-  height: 300px;
+  height: 275px;
   color: white;
 }
 
