--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,18 @@ body {
 ul {
   list-style-type: none;
   margin: 20px;
-  padding: 0px;
+  padding: 5px;
   width: 200px;
-  /* background-color: #f1f1f1; */
+  background-color: #f1f1f1;
 }
 
-li a {
+li {
+  margin: 10px;
+  display: block;
+  padding: 8px 16px;
+}
+
+/* li a {
   display: block;
   color: #000;
   padding: 8px 16px;
@@ -37,7 +43,7 @@ li a.active {
 li a:hover:not(.active) {
   background-color: #555;
   color: white;
-}
+} */
 
 .column1 {
     float: left;
